@@ -1,5 +1,6 @@
 2009-06-11 - Sean Huber (shuber@huberry.com)
   * Huge refactor
+  * Add Object::new_instance_array method
 
 2009-03-16 - Sean Huber (shuber@huberry.com)
   * Add Struct class
